--- a/index.html
+++ b/index.html
@@ -1,72 +1,110 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <title>我珊最美么么哒~</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <meta name="format-detection" content="telephone=no">
-  </head>
-  <body>
-    <!-- normal -->
-    <div id="typer"></div>
-    <div id="board" class="board" style="display: none;">
-      <div id="showArea">
-        <div id="heartMain" class="heart heart-main" style="display: none"></div>
-        <div id="timer" style="display: none">
-          <span id="count"></span>
-          <span>days</span>
-        </div>
-        <div class="foot" style="display: none">
-          <i class="wx"></i>
-          <p class="main">我想你了</p>
-          <button id="send">发送</button>
-        </div>
-      </div>
-    </div>
-    <!-- end of normal -->
+<head>
+	<title>Our Love Story</title>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<style type="text/css">
+		@font-face {
+			font-family: digit;
+			src: url('digital.ttf') format("truetype");
+		}
+	</style>
+	<link href="css/default.css" type="text/css" rel="stylesheet">
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/garden.js"></script>
+	<script type="text/javascript" src="js/functions.js"></script>
+</head>
 
-    
-    <!-- birthday -->
-    <div id="birthday" style="display: none">
-      <audio id="audio" controls="controls">
-        Your browser does not support the audio tag.
-      </audio>
-      <p id="hb">Happy Birthday!</p>
-      <span id="voice_time" class="voice-time" style="display: none;"></span>
-      <div id="voice" class="comment bottom-msg" style="display: none;"></div>
-      <div id="voice_white" class="comment bottom-msg"></div>
-      <!-- cake  -->
-      <div class="cake-screen">
-        <div class="velas">
-          <div class="fuego"></div>
-          <div class="fuego"></div>
-          <div class="fuego"></div>
-          <div class="fuego"></div>
-          <div class="fuego"></div>
-        </div>
-        <svg id="cake" version="1.1" x="0px" y="0px" width="200px" height="500px" viewBox="0 0 200 500" enable-background="new 0 0 200 500" xml:space="preserve">
-          <path fill="#a88679" id="bizcocho_3Path">
-            <animate id="bizcocho_3" attributeName="d" calcMode="spline" keySplines="0 0 1 1; 0 0 1 1" begin="relleno_2.end" dur="0.3s" fill="freeze"/>
-          </path>
-          <path id="relleno_2Path" fill="#8b6a60">
-            <animate id="relleno_2" attributeName="d" calcMode="spline" keySplines="0 0 1 1; 0 0 1 1; 0 0 0.58 1" begin="bizcocho_2.end" dur="0.5s" fill="freeze" />
-          </path>
-          <path fill="#a88679" id="bizcocho_2Path">
-            <animate id="bizcocho_2" attributeName="d" calcMode="spline" keySplines="0 0 1 1; 0 0 1 1; 0.25 0 0.58 1" begin="relleno_1.end" dur="0.5s" fill="freeze" />
-          </path>
-          <path id="relleno_1Path" fill="#8b6a60">
-            <animate id="relleno_1" attributeName="d" calcMode="spline" keySplines="0 0 1 1; 0 0 1 1; 0 0 0.6 1" begin="bizcocho_1.end" dur="0.5s" fill="freeze" />
-          </path>
-          <path fill="#a88679" id="bizcocho_1Path">
-            <animate id="bizcocho_1" attributeName="d" calcMode="spline" keySplines="0 0 1 1; 0 0 1 1; 0 0 1 1; 0.25 0 1 1; 0 0 1 1; 0.25 0 0.6 1" begin="2s" dur="0.8s" fill="freeze" />
-          </path>
-          <path id="cremaPath" fill="#fefae9">
-            <animate id="crema" attributeName="d" calcMode="spline" keySplines="0 0 1 1; 0 0 1 1; 0 0 1 1; 0.25 0 1 1; 0 0 1 1; 0 0 0.58 1" begin="bizcocho_3.end" dur="2s" fill="freeze"/>
-          </path>
-          <rect x="10" y="475.571" fill="#fefae9" width="180" height="4" />
-        </svg>
-      </div>
-    </div>
-    <!-- end of birthday -->
-  <script type="text/javascript" src="./public/js/main.js"></script></body>
+<body>
+<div id="mainDiv">
+	<div id="content">
+		<div id="code">
+			<span class="comments">##</span><br/>
+			<span class="comments"># I am a programmer</span><br/>
+			<span class="comments"># so I write code to celebrate Valentine's Day in coder's way.</span><br/>
+			<span class="comments">##</span><br/>
+			i = Boy(<span class="string">"Qingcai Cui"</span>);<br/>
+			u = Girl(<span class="string">"Qian Ma"</span>);<br/>
+			<span class="comments"># Oct 14, 2018, I meet you because of PyCon 2018. </span><br/>
+			i.meet(u)<br/>
+			<span class="comments"># Afterwards, I confessed to you. </span><br/>
+			i.confess(u)<br/>
+			<span class="comments"># Nov 5, 2018, You became my girlfriend.</span><br/>
+			u.accepted(i)<br/>
+			<span class="comments"># Since then, we spent harmony happiness life every day.</span><br/>
+			happy(u, i)<br/>
+			<span class="comments"># We enjoy studying together.</span><br/>
+			study(u, i)<br/>
+			<span class="comments"># We enjoy cuisine together.</span><br/>
+			dine(u, i)<br/>
+			<span class="comments"># We enjoy appointment together.</span><br/>
+			appoint(u, i)<br/>
+			<span class="comments"># We enjoy vacation together.</span><br/>
+			vacation(u, i)<br/>
+			<span class="comments"># Sometimes there are a few conflicts between us.</span><br/>
+			conflict(u, i, sometimes=<span class="keyword">True</span>)<br/>
+			<span class="comments"># But we are getting more and more in harmony together.</span><br/>
+			u.in_harmony_with(i) <br/>
+			i.in_harmony_with(u) <br/>
+			<span class="comments"># You are the greatest love of my life.</span><br/>
+			while <span class="keyword">True</span>:<br/>
+			<span class="placeholder"></span><span class="keyword">if</span> u.with(i):<br/>
+			<span class="placeholder"></span><span class="placeholder"></span>you = everything<br/>
+			<span class="placeholder"></span><span class="keyword">else</span>:<br/>
+			<span class="placeholder"></span><span class="placeholder"></span>everything = u<br/>
+			<span class="comments"># Waiting me marries you, we will be the happiest couple in the world</span><br/>
+			i.marry(u, in_the_future=<span class="keyword">True</span>)<br/>
+			i.live_happily_forever_with(u)<br/>
+			<span class="comments"># I love you forever.</span><br/>
+		</div>
+		<div id="loveHeart">
+			<canvas id="garden"></canvas>
+			<div id="words">
+				<div id="messages">
+					Qian, I have fallen in love with you for
+					<div id="elapseClock"></div>
+				</div>
+				<div id="loveu">
+					Love u forever and ever.<br/>
+					<div class="signature">- Qingcai Cui | Germey</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="copyright">
+		Copyright © 2019 <a href='http://cuiqingcai.com'>cuiqingcai.com</a> 2014-2019
+	</div>
+</div>
+<script type="text/javascript">
+	var offsetX = $("#loveHeart").width() / 2;
+	var offsetY = $("#loveHeart").height() / 2 - 55;
+	var together = new Date();
+	together.setFullYear(2018, 10, 5);
+	together.setHours(15);
+	together.setMinutes(0);
+	together.setSeconds(0);
+	together.setMilliseconds(0);
+	if (!document.createElement('canvas').getContext) {
+		var msg = document.createElement("div");
+		msg.id = "errorMsg";
+		msg.innerHTML = "Your browser doesn't support HTML5!<br/>Recommend use Chrome 14+/IE 9+/Firefox 7+/Safari 4+";
+		document.body.appendChild(msg);
+		$("#code").css("display", "none")
+		$("#copyright").css("position", "absolute");
+		$("#copyright").css("bottom", "10px");
+		document.execCommand("stop");
+	} else {
+		setTimeout(function () {
+			startHeartAnimation();
+		}, 5000);
+		timeElapse(together);
+		setInterval(function () {
+			timeElapse(together);
+		}, 500);
+		adjustCodePosition();
+		$("#code").typewriter();
+	}
+</script>
+</body>
 </html>
