--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 			<span class="comments"># I am a programmer</span><br/>
 			<span class="comments"># so I write code to celebrate Valentine's Day in coder's way.</span><br/>
 			<span class="comments">##</span><br/>
-			i = Boy(<span class="string">"Qingcai Cui"</span>);<br/>
-			u = Girl(<span class="string">"Qian Ma"</span>);<br/>
+			i = Boy(<span class="string">"Hao Lyu"</span>);<br/>
+			u = Girl(<span class="string">"Wang Ruiqi"</span>);<br/>
 			<span class="comments"># Oct 14, 2018, I meet you because of PyCon 2018. </span><br/>
 			i.meet(u)<br/>
 			<span class="comments"># Afterwards, I confessed to you. </span><br/>
@@ -62,25 +62,23 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					Qian, I have fallen in love with you for
+				   QiQi, I have fallen in love with you for
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
 					Love u forever and ever.<br/>
-					<div class="signature">- Qingcai Cui | Germey</div>
+					<div class="signature">- Hao </div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div id="copyright">
-		Copyright © 2019 <a href='http://cuiqingcai.com'>cuiqingcai.com</a> 2014-2019
-	</div>
+	
 </div>
 <script type="text/javascript">
 	var offsetX = $("#loveHeart").width() / 2;
 	var offsetY = $("#loveHeart").height() / 2 - 55;
 	var together = new Date();
-	together.setFullYear(2018, 10, 5);
+	together.setFullYear(2019, 06, 23);
 	together.setHours(15);
 	together.setMinutes(0);
 	together.setSeconds(0);
