--- a/index.html
+++ b/index.html
@@ -21,24 +21,23 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">##</span><br/>
-			<span class="comments"># I am a programmer</span><br/>
-			<span class="comments"># so I write code to celebrate Valentine's Day in coder's way.</span><br/>
+			<span class="comments"># I am not a professional programmer</span><br/>
+			<span class="comments"># but I still tried out to write a code to celebrate Chinese Valentine's Day in coder's way.</span><br/>
 			<span class="comments">##</span><br/>
 			i = Boy(<span class="string">"Hao Lyu"</span>);<br/>
 			u = Girl(<span class="string">"Wang Ruiqi"</span>);<br/>
-			<span class="comments"># Sometimes there are a few conflicts between us.</span><br/>
+			<span class="comments"># Although sometimes there are a few conflicts between us.</span><br/>
 			conflict(u, i, sometimes=<span class="keyword">True</span>)<br/>
 			<span class="comments"># But we are getting more and more in harmony together.</span><br/>
 			u.in_harmony_with(i) <br/>
 			i.in_harmony_with(u) <br/>
-			<span class="comments"># You are the greatest love of my life.</span><br/>
+			<span class="comments"># You are the greatest thing in my life.</span><br/>
 			while <span class="keyword">True</span>:<br/>
 			<span class="placeholder"></span><span class="keyword">if</span> u.with(i):<br/>
 			<span class="placeholder"></span><span class="placeholder"></span>you = everything<br/>
 			<span class="placeholder"></span><span class="keyword">else</span>:<br/>
 			<span class="placeholder"></span><span class="placeholder"></span>everything = u<br/>
-			<span class="comments"># Waiting me marries you, we will be the happiest couple in the world</span><br/>
-			i.marry(u, in_the_future=<span class="keyword">True</span>)<br/>
+			<span class="comments"># You may fall from the tree, you may fall from sky, but the best way to fall...is in love with me. We will be the happiest couple in the world</span><br/>
 			i.live_happily_forever_with(u)<br/>
 			<span class="comments"># I love you forever.</span><br/>
 		</div>
