--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 			<span class="placeholder"></span><span class="placeholder"></span>you = everything<br/>
 			<span class="placeholder"></span><span class="keyword">else</span>:<br/>
 			<span class="placeholder"></span><span class="placeholder"></span>everything = u<br/>
-			<span class="comments"># You may fall from the tree, you may fall from sky, but the best way to fall...is in love with me. We will be the happiest couple in the world</span><br/>
+			<span class="comments"># I may fall from the tree, I may fall from sky, but the best way to fall...is in love with you. We will be the happiest couple in the world</span><br/>
 			i.live_happily_forever_with(u)<br/>
-			<span class="comments"># I love you forever.</span><br/>
+			<span class="comments"># I love you more than yesterday and less than tomorrow.</span><br/>
 		</div>
 		<div id="loveHeart">
 			<canvas id="garden"></canvas>
