--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">##</span><br/>
-			<span class="comments"># I am not a professional programmer</span><br/>
+			<span class="comments"># My top of heart!</span><br/>
+			<span class="comments"># I've thought about what could be a good gift for the lovely you</span><br/>
+		        <span class="comments"># I am not a professional programmer</span><br/>
 			<span class="comments"># but I still tried out to write a code to celebrate Chinese Valentine's Day in coder's way.</span><br/>
 			<span class="comments">##</span><br/>
 			i = Boy(<span class="string">"Hao Lyu"</span>);<br/>
