--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			u.in_harmony_with(i) <br/>
 			i.in_harmony_with(u) <br/>
 			<span class="comments"># You are the greatest thing in my life.</span><br/>
+			<span class="comments"># And you are my everything.</span><br/>
 			while <span class="keyword">True</span>:<br/>
 			<span class="placeholder"></span><span class="keyword">if</span> u.with(i):<br/>
 			<span class="placeholder"></span><span class="placeholder"></span>you = everything<br/>
