--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		        <span class="comments"># I am not a professional programmer</span><br/>
 			<span class="comments"># but I still tried out to write a code to celebrate Chinese Valentine's Day in coder's way.</span><br/>
 			<span class="comments">##</span><br/>
-			i = Boy(<span class="string">"Hao Lyu"</span>);<br/>
-			u = Girl(<span class="string">"Wang Ruiqi"</span>);<br/>
+			i = Boy(<span class="string">"Hao Lyu 吕昊"</span>);<br/>
+			u = Girl(<span class="string">"Wang Ruiqi 王瑞琪"</span>);<br/>
 			<span class="comments"># Although sometimes there are a few conflicts between us.</span><br/>
 			conflict(u, i, sometimes=<span class="keyword">True</span>)<br/>
 			<span class="comments"># But we are getting more and more in harmony together.</span><br/>
