--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>琪琪最可爱</title>
+	<title>生日快乐</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<style type="text/css">
@@ -21,13 +21,13 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">##</span><br/>
-			<span class="comments"># My top of heart!</span><br/>
+			<span class="comments"># Happer Birthday!生日快乐！</span><br/>
 			<span class="comments"># I've thought about what could be a good gift for the lovely you</span><br/>
 		        <span class="comments"># I am not a professional programmer</span><br/>
 			<span class="comments"># but I still tried out to write a code to celebrate Chinese Valentine's Day in coder's way.</span><br/>
 			<span class="comments">##</span><br/>
-			i = Boy(<span class="string">"Hao Lyu 吕昊"</span>);<br/>
-			u = Girl(<span class="string">"Wang Ruiqi 王瑞琪"</span>);<br/>
+			i = Boy(<span class="string">"Haohao"</span>);<br/>
+			u = Girl(<span class="string">"Nana"</span>);<br/>
 			<span class="comments"># Although sometimes there are a few conflicts between us.</span><br/>
 			conflict(u, i, sometimes=<span class="keyword">True</span>)<br/>
 			<span class="comments"># But we are getting more and more in harmony together.</span><br/>
@@ -64,7 +64,7 @@
 	var offsetX = $("#loveHeart").width() / 2;
 	var offsetY = $("#loveHeart").height() / 2 - 55;
 	var together = new Date();
-	together.setFullYear(2019, 05, 23);
+	together.setFullYear(2019, 01, 23);
 	together.setHours(15);
 	together.setMinutes(0);
 	together.setSeconds(0);
