--- a/index.html
+++ b/index.html
@@ -48,11 +48,8 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-				   QiQi, I have fallen in love with you for
-					<div id="elapseClock"></div>
-				</div>
-				<div id="loveu">
-					Love u forever and ever.<br/>
+				   娜娜, 生日快乐！
+				
 					<div class="signature">- Hao </div>
 				</div>
 			</div>
