--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
 			<div id="words">
 				<div id="messages">
 				   娜娜, 生日快乐！
-				
+					<div id="elapseClock"></div>
+				</div>
+				<div id="loveu">
+					Love u forever and ever.<br/>
 					<div class="signature">- Hao </div>
 				</div>
 			</div>
