--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<span class="comments"># Happer Birthday!生日快乐！</span><br/>
 			<span class="comments"># I've thought about what could be a good gift for the lovely you</span><br/>
 		        <span class="comments"># I am not a professional programmer</span><br/>
-			<span class="comments"># but I still tried out to write a code to celebrate Chinese Valentine's Day in coder's way.</span><br/>
+			<span class="comments"># but I still tried out to write a code to celebrate your birthday in coder's way.</span><br/>
 			<span class="comments">##</span><br/>
 			i = Boy(<span class="string">"Haohao"</span>);<br/>
 			u = Girl(<span class="string">"Nana"</span>);<br/>
