--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">##</span><br/>
-			<span class="comments"># Happer Birthday!生日快乐！</span><br/>
+			<span class="comments"># Happy Birthday!生日快乐！</span><br/>
 			<span class="comments"># I've thought about what could be a good gift for the lovely you</span><br/>
 		        <span class="comments"># I am not a professional programmer</span><br/>
 			<span class="comments"># but I still tried out to write a code to celebrate your birthday in coder's way.</span><br/>
