--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>生日快乐</title>
+	<title>亲爱的玖儿，情人节快乐！</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<style type="text/css">
@@ -21,14 +21,14 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">##</span><br/>
-			<span class="comments"># Happy Birthday!生日快乐！</span><br/>
+			<span class="comments"># Happy Valentines Day!情人节快乐！</span><br/>
 			<span class="comments"># I've thought about what could be a good gift for the lovely you</span><br/>
 		        <span class="comments"># I am not a professional programmer</span><br/>
-			<span class="comments"># but I still tried out to write a code to celebrate your birthday in coder's way.</span><br/>
+			<span class="comments"># but I still tried out to write a code to celebrate Valentines day with you in coder's way.</span><br/>
 			<span class="comments">##</span><br/>
 			i = Boy(<span class="string">"Haohao"</span>);<br/>
-			u = Girl(<span class="string">"Nana"</span>);<br/>
-			<span class="comments"># Although sometimes there are a few conflicts between us.</span><br/>
+			u = Girl(<span class="string">"Jiujiu"</span>);<br/>
+			<span class="comments"># Although we just met for several days.</span><br/>
 			conflict(u, i, sometimes=<span class="keyword">True</span>)<br/>
 			<span class="comments"># But we are getting more and more in harmony together.</span><br/>
 			u.in_harmony_with(i) <br/>
@@ -48,7 +48,7 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-				              娜娜, 生日快乐！
+				              玖玖宝贝, 情人节快乐！
 					
 				</div>
 				<div id="loveu">
@@ -64,7 +64,7 @@
 	var offsetX = $("#loveHeart").width() / 2;
 	var offsetY = $("#loveHeart").height() / 2 - 55;
 	var together = new Date();
-	together.setFullYear(2019, 01, 23);
+	together.setFullYear(2020, 02, 05);
 	together.setHours(15);
 	together.setMinutes(0);
 	together.setSeconds(0);
