--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
 		        <span class="comments"># I am not a professional programmer</span><br/>
 			<span class="comments"># but I still tried out to write a code to celebrate Valentines day with you in coder's way.</span><br/>
 			<span class="comments">##</span><br/>
-			i = Boy(<span class="string">"Haohao"</span>);<br/>
-			u = Girl(<span class="string">"Jiujiu"</span>);<br/>
+			i = Boy(<span class="string">"昊昊"</span>);<br/>
+			u = Girl(<span class="string">"玖玖"</span>);<br/>
 			<span class="comments"># Although we just met for several days.</span><br/>
-			conflict(u, i, sometimes=<span class="keyword">True</span>)<br/>
 			<span class="comments"># But we are getting more and more in harmony together.</span><br/>
 			u.in_harmony_with(i) <br/>
 			i.in_harmony_with(u) <br/>
