--- a/index.html
+++ b/index.html
@@ -21,19 +21,26 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">##</span><br/>
-			<span class="comments"># Happy Valentines Day!情人节快乐！</span><br/>
+			<span class="comments"># Happy Valentines Day!情人节快乐，玖玖！</span><br/>
 			<span class="comments"># I've thought about what could be a good gift for the lovely you</span><br/>
+			<span class="comments"># 我一直在想什么礼物可以匹配上最可爱的你</span><br/>
 		        <span class="comments"># I am not a professional programmer</span><br/>
+			 <span class="comments"># 我不是码工</span><br/>
 			<span class="comments"># but I still tried out to write a code to celebrate Valentines day with you in coder's way.</span><br/>
+			<span class="comments"># 但我仍会以代码的形式跟你一起庆祝情人节.</span><br/>
 			<span class="comments">##</span><br/>
 			i = Boy(<span class="string">"昊昊"</span>);<br/>
 			u = Girl(<span class="string">"玖玖"</span>);<br/>
 			<span class="comments"># Although we just met for several days.</span><br/>
-			<span class="comments"># But we are getting more and more in harmony together.</span><br/>
+			<span class="comments"># 尽管我们才相识几天.</span><br/>
+			<span class="comments"># we are getting more and more in harmony together.</span><br/>
+			<span class="comments"># 但我们变得越来越默契</span><br/>
 			u.in_harmony_with(i) <br/>
 			i.in_harmony_with(u) <br/>
 			<span class="comments"># You are the greatest thing in my life.</span><br/>
+			<span class="comments"># 你是我生命中遇到的最美好的一部分.</span><br/>
 			<span class="comments"># And you are my everything.</span><br/>
+			<span class="comments"># 你是我的所有^-^.</span><br/>
 			while <span class="keyword">True</span>:<br/>
 			<span class="placeholder"></span><span class="keyword">if</span> u.with(i):<br/>
 			<span class="placeholder"></span><span class="placeholder"></span>you = everything<br/>
@@ -42,6 +49,7 @@
 			<span class="comments"># I may fall from the tree, I may fall from sky, but the best way to fall...is in love with you. We will be the happiest couple in the world</span><br/>
 			i.live_happily_forever_with(u)<br/>
 			<span class="comments"># I love you more than yesterday and less than tomorrow.</span><br/>
+			<span class="comments"># 爱你少于明天多于昨天.</span><br/>
 		</div>
 		<div id="loveHeart">
 			<canvas id="garden"></canvas>
@@ -52,7 +60,7 @@
 				</div>
 				<div id="loveu">
 					Love u forever and ever.<br/>
-					<div class="signature">- Hao </div>
+					<div class="signature">- Hao 昊 </div>
 				</div>
 			</div>
 		</div>
