--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>亲爱的玖儿，情人节快乐！</title>
+	<title>亲爱的楚儿，情人节快乐！</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<style type="text/css">
@@ -21,7 +21,7 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">##</span><br/>
-			<span class="comments"># Happy Valentines Day!情人节快乐，玖玖！</span><br/>
+			<span class="comments"># Happy Valentines Day!情人节快乐，楚儿！</span><br/>
 			<span class="comments"># I've thought about what could be a good gift for the lovely you</span><br/>
 			<span class="comments"># 我一直在想什么礼物可以匹配上最可爱的你</span><br/>
 		        <span class="comments"># I am not a professional programmer</span><br/>
@@ -30,7 +30,7 @@
 			<span class="comments"># 但我仍会以代码的形式跟你一起庆祝情人节.</span><br/>
 			<span class="comments">##</span><br/>
 			i = Boy(<span class="string">"昊昊"</span>);<br/>
-			u = Girl(<span class="string">"玖玖"</span>);<br/>
+			u = Girl(<span class="string">"楚儿"</span>);<br/>
 			<span class="comments"># Although we just met for several days.</span><br/>
 			<span class="comments"># 尽管我们才相识几天.</span><br/>
 			<span class="comments"># we are getting more and more in harmony together.</span><br/>
@@ -55,7 +55,7 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-				              玖玖宝贝, 情人节快乐！
+				              楚儿宝贝, 520快乐！
 					
 				</div>
 				<div id="loveu">
