--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>亲爱的楚儿，情人节快乐！</title>
+	<title>亲爱的楚儿，520快乐鸭！</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<style type="text/css">
@@ -21,13 +21,13 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">##</span><br/>
-			<span class="comments"># Happy Valentines Day!情人节快乐，楚儿！</span><br/>
+			<span class="comments"># 520快乐鸭，楚儿！</span><br/>
 			<span class="comments"># I've thought about what could be a good gift for the lovely you</span><br/>
 			<span class="comments"># 我一直在想什么礼物可以匹配上最可爱的你</span><br/>
-		        <span class="comments"># I am not a professional programmer</span><br/>
-			 <span class="comments"># 我不是码工</span><br/>
-			<span class="comments"># but I still tried out to write a code to celebrate Valentines day with you in coder's way.</span><br/>
-			<span class="comments"># 但我仍会以代码的形式跟你一起庆祝情人节.</span><br/>
+		        <span class="comments"># Although I haven't prepared something big</span><br/>
+			 <span class="comments"># 虽然刚我没有准备什么大的礼物</span><br/>
+			<span class="comments"># I still would like to send you this small gift.</span><br/>
+			<span class="comments"># 但我还是想送你一个小小的礼物.</span><br/>
 			<span class="comments">##</span><br/>
 			i = Boy(<span class="string">"昊昊"</span>);<br/>
 			u = Girl(<span class="string">"楚儿"</span>);<br/>
@@ -39,17 +39,17 @@
 			i.in_harmony_with(u) <br/>
 			<span class="comments"># You are the greatest thing in my life.</span><br/>
 			<span class="comments"># 你是我生命中遇到的最美好的一部分.</span><br/>
-			<span class="comments"># And you are my everything.</span><br/>
-			<span class="comments"># 你是我的所有^-^.</span><br/>
+			<span class="comments"># I love your cutie, tenderness amd sweetness.</span><br/>
+			<span class="comments"># 喜欢你的温柔，可爱和甜^-^.</span><br/>
 			while <span class="keyword">True</span>:<br/>
 			<span class="placeholder"></span><span class="keyword">if</span> u.with(i):<br/>
 			<span class="placeholder"></span><span class="placeholder"></span>you = everything<br/>
 			<span class="placeholder"></span><span class="keyword">else</span>:<br/>
 			<span class="placeholder"></span><span class="placeholder"></span>everything = u<br/>
-			<span class="comments"># I may fall from the tree, I may fall from sky, but the best way to fall...is in love with you. We will be the happiest couple in the world</span><br/>
-			i.live_happily_forever_with(u)<br/>
-			<span class="comments"># I love you more than yesterday and less than tomorrow.</span><br/>
-			<span class="comments"># 爱你少于明天多于昨天.</span><br/>
+			<span class="comments"># Wish all the best and happiness.</span><br/>
+			<span class="comments"># 希望你快乐永远常伴你左右哦.</span><br/>
+			<span class="comments"># My nickname is 'happiness'.</span><br/>
+			<span class="comments"># 我小名叫快乐！！.</span><br/>
 		</div>
 		<div id="loveHeart">
 			<canvas id="garden"></canvas>
