--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<span class="comments"># 520快乐鸭，楚儿！</span><br/>
 			<span class="comments"># I've thought about what could be a good gift for the lovely you</span><br/>
 			<span class="comments"># 我一直在想什么礼物可以匹配上最可爱的你</span><br/>
-		        <span class="comments"># Although I haven't prepared something big</span><br/>
+		        <span class="comments"># Although I haven't prepared anything big</span><br/>
 			 <span class="comments"># 虽然刚我没有准备什么大的礼物</span><br/>
 			<span class="comments"># I still would like to send you this small gift.</span><br/>
 			<span class="comments"># 但我还是想送你一个小小的礼物.</span><br/>
@@ -39,7 +39,7 @@
 			i.in_harmony_with(u) <br/>
 			<span class="comments"># You are the greatest thing in my life.</span><br/>
 			<span class="comments"># 你是我生命中遇到的最美好的一部分.</span><br/>
-			<span class="comments"># I love your cutie, tenderness amd sweetness.</span><br/>
+			<span class="comments"># I love your cutie, tenderness and sweetness.</span><br/>
 			<span class="comments"># 喜欢你的温柔，可爱和甜^-^.</span><br/>
 			while <span class="keyword">True</span>:<br/>
 			<span class="placeholder"></span><span class="keyword">if</span> u.with(i):<br/>
@@ -49,7 +49,7 @@
 			<span class="comments"># Wish all the best and happiness.</span><br/>
 			<span class="comments"># 希望你快乐永远常伴你左右哦.</span><br/>
 			<span class="comments"># My nickname is 'happiness'.</span><br/>
-			<span class="comments"># 我小名叫快乐！！.</span><br/>
+			<span class="comments"># 对了，我小名叫快乐！！520！2020202020...</span><br/>
 		</div>
 		<div id="loveHeart">
 			<canvas id="garden"></canvas>
