--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<span class="comments"># Although we just met for several days.</span><br/>
 			<span class="comments"># 尽管我们才相识几天.</span><br/>
 			<span class="comments"># we are getting more and more in harmony together.</span><br/>
-			<span class="comments"># 但我们变得越来越默契</span><br/>
+			<span class="comments"># 但我们在一起很开心</span><br/>
 			u.in_harmony_with(i) <br/>
 			i.in_harmony_with(u) <br/>
 			<span class="comments"># You are the greatest thing in my life.</span><br/>
@@ -45,7 +45,7 @@
 			<span class="placeholder"></span><span class="keyword">if</span> u.with(i):<br/>
 			<span class="placeholder"></span><span class="placeholder"></span>you = everything<br/>
 			<span class="placeholder"></span><span class="keyword">else</span>:<br/>
-			<span class="placeholder"></span><span class="placeholder"></span>everything = u<br/>
+			<span class="placeholder"></span><span class="placeholder"></span>everything = you<br/>
 			<span class="comments"># Wish all the best and happiness.</span><br/>
 			<span class="comments"># 希望你快乐永远常伴你左右哦.</span><br/>
 			<span class="comments"># My nickname is 'happiness'.</span><br/>
