--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 			<span class="comments"># 尽管我们才相识几天.</span><br/>
 			<span class="comments"># we are getting more and more in harmony together.</span><br/>
 			<span class="comments"># 但我们在一起很开心</span><br/>
-			u.in_harmony_with(i) <br/>
-			i.in_harmony_with(u) <br/>
+			u.happy_with(i) <br/>
+			i.happy_with(u) <br/>
 			<span class="comments"># You are the greatest thing in my life.</span><br/>
 			<span class="comments"># 你是我生命中遇到的最美好的一部分.</span><br/>
 			<span class="comments"># I love your cutie, tenderness and sweetness.</span><br/>
