--- a/index.html
+++ b/index.html
@@ -38,16 +38,15 @@
 			<span class="placeholder"></span><span class="placeholder"></span>you = everything<br/>
 			<span class="placeholder"></span><span class="keyword">else</span>:<br/>
 			<span class="placeholder"></span><span class="placeholder"></span>everything = you<br/>
-			<span class="comments"># Wish all the best and happiness.</span><br/>
-			<span class="comments"># 希望你快乐永远常伴你左右哦.</span><br/>
-			<span class="comments"># My nickname is 'happiness'.</span><br/>
-			<span class="comments"># 对了，我小名叫快乐！！520！2020202020...</span><br/>
+			<span class="comments"># 下面我用三种语言正式道歉！</span><br/>
+			<span class="comments"># Tur mir leid! Lo siento! I'm so sorry. 对不起</span><br/>
+			<span class="comments"># 我们不能还没开始就结束不是，那样也太便宜我了...</span><br/>
 		</div>
 		<div id="loveHeart">
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-				              楚儿, 别生气了！我认错了
+				              楚儿, 别生气了！我认错了!LUV U O！
 					
 				</div>
 				<div id="loveu">
